samples/_failures_safe/1761043225_a36797_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e2f42b2.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_4e2f42b2.c:157:13: error: expected declaration or statement at end of input
  157 |             case TOKEN_IDENTIFIER: type_str = "IDENTIFIER"; break;
      |             ^~~~
./samples/SAFE/__tmp_4e2f42b2.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e2f42b2.c:157:13: error: expected declaration or statement at end of input
